--- a/page2.html
+++ b/page2.html
@@ -42,5 +42,14 @@
     <script src="js/Shape.js" type="text/javascript"></script>
     <script src="js/Rune.js" type="text/javascript"></script>
     <script src="js/MagicCircle.js" type="text/javascript"></script>
+
+    <div class="instruction">
+      <a class="cta" href="page3.html"> <button>NEXT PAGE</button></a>
+    </div>
+
+    <div id ="footer">
+      <h3> / art & code by Karrel May Sinfuego / </h3>
+    </div>
+
   </body>
 </html>
