--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <img id="imgLogo" width=10% img src="assets/isekai-logo.png" alt="imgLogo">
   <nav>
     <ul class="nav-links">
-      <li> <a href="index.html">home</a> </li>
-      <li> <a href="page2.html">next</a> </li>
-      <li> <a href="https://github.com/karrelmay/CCLab_F21/tree/master/ccl-karrel-12r">github</a> </li>
+      <li> <a href="index.html">HOME</a> </li>
+      <li> <a href="page1.html">NEXT</a> </li>
+      <li> <a href="https://github.com/karrelmay/CCLab_F21/tree/master/ccl-karrel-12r">GITHUB</a> </li>
     </ul>
   </nav>
 
@@ -21,16 +21,24 @@
 </header>
 
   <body>
-    <script src="js/Appearable.js" type="text/javascript"></script>
-    <script src="js/Particle.js" type="text/javascript"></script>
-    <div id="canvas-container">
-      <script src="js/script.js" type="text/javascript"></script>
+    <!-- <div class="box"></div> -->
+    <div class="intro-phrase">
+      <h2>an interactive manga project</h2>
+    </div>
+    <div class="intro">
+      <img width = 65%, src="assets/isekai-logo.png" alt="">
+
     </div>
 
-    <script src="js/FlowBackground.js" type="text/javascript"></script>
-    <script src="js/Background_1_2.js" type="text/javascript"></script>
-    <script src="js/Img.js" type="text/javascript"></script>
-    <script src="js/Shakable.js" type="text/javascript"></script>
-    <script src="js/Noisefield.js" type="text/javascript"></script>
+    <div class="intro-play">
+        <a class="cta" href="page1.html"> <button>PLAY NOW</button></a>
+        <a class="cta" href="#"> <button>INSTRUCTIONS</button></a>
+    </div>
+
   </body>
+
+  <div id ="footer">
+    <h3> / art & code by Karrel May Sinfuego / </h3>
+  </div>
+
 </html>
