--- a/page3.html
+++ b/page3.html
@@ -26,7 +26,7 @@
   </header>
 
   <body>
-    <div id="canvas-container">
+    <div id="canvas-container-game">
       <script src="js/script3.js" type="text/javascript"></script>
     </div>
     <script src="js/Appearable.js" type="text/javascript"></script>
