--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <ul class="nav-links">
       <li> <a href="index.html">HOME</a> </li>
       <li> <a href="page1.html">NEXT</a> </li>
-      <li> <a href="https://github.com/karrelmay/CCLab_F21/tree/master/ccl-karrel-12r">GITHUB</a> </li>
+      <li> <a href="https://github.com/karrelmay/ccl-final">GITHUB</a> </li>
     </ul>
   </nav>
 
