--- a/page1.html
+++ b/page1.html
@@ -8,17 +8,19 @@
   </head>
 
   <header>
-  <img id="imgLogo" width=10% img src="assets/isekai-logo.png" alt="imgLogo">
-  <nav>
-    <ul class="nav-links">
-      <li> <a href="index.html">home</a> </li>
-      <li> <a href="page2.html">next</a> </li>
-      <li> <a href="https://github.com/karrelmay/CCLab_F21/tree/master/ccl-karrel-12r">github</a> </li>
-    </ul>
-  </nav>
 
-  <a class="cta" href="#"> <button>documentation</button></a>
-</header>
+    <img id="imgLogo" width=10% img src="assets/isekai-logo.png" alt="imgLogo">
+    <nav>
+      <ul class="nav-links">
+        <li> <a href="index.html">HOME</a> </li>
+        <li> <a href="#">ABOUT</a> </li>
+        <li> <a href="https://github.com/karrelmay/ccl-final">GITHUB</a> </li>
+      </ul>
+    </nav>
+
+    <a class="cta" href="#"> <button>documentation</button></a>
+
+  </header>
 
   <body>
     <script src="js/Appearable.js" type="text/javascript"></script>
