--- a/page3.html
+++ b/page3.html
@@ -15,9 +15,9 @@
     <img id="imgLogo" width=10% img src="assets/isekai-logo.png" alt="imgLogo">
     <nav>
       <ul class="nav-links">
-        <li> <a href="index.html">home</a> </li>
-        <li> <a href="page3.html">next</a> </li>
-        <li> <a href="https://github.com/karrelmay/CCLab_F21/tree/master/ccl-karrel-12r">github</a> </li>
+        <li> <a href="index.html">HOME</a> </li>
+        <li> <a href="#">NEXT</a> </li>
+        <li> <a href="https://github.com/karrelmay/ccl-final">GITHUB</a> </li>
       </ul>
     </nav>
 
