--- a/page2.html
+++ b/page2.html
@@ -14,7 +14,7 @@
       <ul class="nav-links">
         <li> <a href="index.html">HOME</a> </li>
         <li> <a href="#">ABOUT</a> </li>
-        <li> <a href="https://github.com/karrelmay/ccl-final">github</a> </li>
+        <li> <a href="https://github.com/karrelmay/ccl-final">GITHUB</a> </li>
       </ul>
     </nav>
 
