--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </ul>
   </nav>
 
-  <a class="cta" href="#"> <button>documentation</button></a>
+  <a class="cta" href="#"> <button>DOCUMENTATION</button></a>
 </header>
 
   <body>
@@ -31,7 +31,7 @@
     </div>
 
     <div class="intro-play">
-        <a class="cta" href="page1.html"> <button>PLAY NOW</button></a>
+        <a class="cta" href="entry.html"> <button>PLAY NOW</button></a>
         <a class="cta" href="#"> <button>INSTRUCTIONS</button></a>
     </div>
 
