--- a/page3.html
+++ b/page3.html
@@ -21,7 +21,7 @@
       </ul>
     </nav>
 
-    <a class="cta" href="#"> <button>documentation</button></a>
+      <a class="cta" href="#"> <button>DOCUMENTATION</button></a>
 
   </header>
 
