--- a/page2.html
+++ b/page2.html
@@ -18,7 +18,7 @@
       </ul>
     </nav>
 
-    <a class="cta" href="#"> <button>documentation</button></a>
+    <a class="cta" href="#"> <button>DOCUMENTATION</button></a>
 
   </header>
 
@@ -31,7 +31,6 @@
     <script src="js/PetalRain.js" type="text/javascript"></script>
     <script src="js/Particle.js" type="text/javascript"></script>
     <script src="js/FlowBackground.js" type="text/javascript"></script>
-    <script src="js/Background_1_2.js" type="text/javascript"></script>
     <script src="js/Img.js" type="text/javascript"></script>
     <script src="js/Shakable.js" type="text/javascript"></script>
     <script src="js/Noisefield.js" type="text/javascript"></script>
