--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="intro-play">
-        <a class="cta" href="newpage1.html"> <button>PLAY NOW</button></a>
+        <a class="cta" href="page1.html"> <button>PLAY NOW</button></a>
         <a class="cta" href="#"> <button>INSTRUCTIONS</button></a>
     </div>
 
