--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
     <div class="modal">
       <div class="player-field">
         <h1>enter <strong> player name</strong></h1><br>
-        <input type="text" id="name-input" placeholder="your name..">
+        <input type="text" id="name-input" placeholder="your name">
 
         <div class="enter-text">
           <a id="close"> <button>ENTER</button></a>
@@ -48,11 +48,11 @@
   </body>
 
   <div class="instruction">
-  <a class="cta" href="page2.html"> <button id="next">NEXT PAGE</button></a>
+  <a class="cta" href="page2.html"> <button id="next-page">NEXT PAGE</button></a>
   </div>
 
   <div id ="footer">
-  <h3> / art & code by Karrel May Sinfuego / </h3>
+  <h3> / art & code by karrelmay / </h3>
   </div>
 
 </html>
