--- a/page2.html
+++ b/page2.html
@@ -8,17 +8,12 @@
   </head>
 
   <header>
-
     <img id="imgLogo" width=10% img src="assets/isekai-logo.png" alt="imgLogo">
     <nav>
       <ul class="nav-links">
         <li> <a href="index.html">HOME</a> </li>
-        <li> <a href="#">ABOUT</a> </li>
-        <li> <a href="https://github.com/karrelmay/ccl-final">GITHUB</a> </li>
       </ul>
     </nav>
-
-    <a class="cta" href="#"> <button>DOCUMENTATION</button></a>
 
   </header>
 
@@ -47,7 +42,7 @@
     </div>
 
     <div id ="footer">
-      <h3> / art & code by Karrel May Sinfuego / </h3>
+      <h3> / art & code by karrelmay / </h3>
     </div>
 
   </body>
