--- a/page3.html
+++ b/page3.html
@@ -6,22 +6,16 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="js/lib/p5.js" type="text/javascript"></script>
     <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js" type="text/javascript"></script>
-    <script src="js/lib/p5.sound.min.js" type="text/javascript"></script>
 
   </head>
 
   <header>
-
     <img id="imgLogo" width=10% img src="assets/isekai-logo.png" alt="imgLogo">
     <nav>
       <ul class="nav-links">
         <li> <a href="index.html">HOME</a> </li>
-        <li> <a href="#">NEXT</a> </li>
-        <li> <a href="https://github.com/karrelmay/ccl-final">GITHUB</a> </li>
       </ul>
     </nav>
-
-      <a class="cta" href="#"> <button>DOCUMENTATION</button></a>
 
   </header>
 
@@ -42,6 +36,13 @@
     <script src="js/Entry.js" type="text/javascript"></script>
     <script src="js/monster.js" type="text/javascript"></script>
 
+    <div class="instruction">
+      <a class="cta" href="page4.html"> <button>NEXT PAGE</button></a>
+    </div>
+
+    <div id ="footer">
+      <h3> / art & code by karrelmay / </h3>
+    </div>
 
   </body>
 </html>
