--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 
       <p><strong> CLICK </strong> on the screen to interact with the manga <br><br>
         click on the <strong>NEXT PAGE</strong> button to transition between pages<br><br>
-        Remember, <strong> ALLOW camera access </strong> & make sure <strong>NO OTHER</strong> application is using it!<br><br>
+        Remember, <strong> ALLOW camera access </strong> & make sure <strong>NO OTHER</strong> application is using it! <br><br>
+         For best performance, move back a little and make sure your <strong> background is not complicated </strong><br><br>
         <strong>zooming out may be necessary if all assets aren't viewed correctly!</strong> <br><br>
         Have fun, 頑張ってね !</p>
         </div>
